--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
       </ul> 
      </nav> 
      <ul class="header-list"> 
-      <li><a href="mailto:info@devstudio.com" class="adres">info@devstudio.com <svg class="adres-icon">
+      <li><a href="mailto:info@devstudio.com" class="adres"><svg class="adres-icon">
         <use href="./img/symbol-defs.svg#icon-envelope">
           
         </use>
-      </svg>
+      </svg>info@devstudio.com 
     </a></li> 
-      <li><a href="tel:+380961111111" class="number">+38 096 111 11 11 <svg class="adres-icon">
+      <li><a href="tel:+380961111111" class="number"><svg class="adres-icon">
         <use href="./img/symbol-defs.svg#icon-smartphone">
 
         </use>
-      </svg></a></li> 
+      </svg>+38 096 111 11 11</a></li> 
      </ul>
     </div> 
   </header> 
@@ -69,13 +69,22 @@
     </section> 
      <section class="main">
       <div class="container"> 
-      <h2 class="main-title">Чим ми займаємося</h2> 
-      <ul class="main-img"> 
-        <li class="main-item"><img src="img/comp.jpg" alt="comp"></li> 
-        <li class="main-item"><img src="img/laptop.jpg" alt="laptop"></li> 
-        <li class="main-item"><img src="img/tablet.jpg" alt="tablet"></li> 
+        <h2 class="main-title">Чим ми займаємося</h2> 
+      <ul class="main-img">
+        <div class="position-box"> 
+        <li class="main-item"><img src="img/comp.jpg" alt="comp">
+          <p class="main-position">Десктопні додатки</p></li> 
+         </div>
+         <div class="position-box">
+      <li class="main-item"><img src="img/laptop.jpg" alt="laptop">
+        <p class="main-position">Мобільні додатки</p></li>
+        </div> 
+        <div class="position-box">
+        <li class="main-item"><img src="img/tablet.jpg" alt="tablet">
+        <p class="main-position">Дизайнерські рішення</p></li>
+      </div> 
       </ul> 
-    </div>
+   </div>
      </section> 
      <section class="team">
       <div class="container" class="div">
@@ -86,6 +95,18 @@
           <div class="margin">
           <h2 class="team-titles">Ігор Дем'яненко</h2>
            <p class="team-text">Product Designer</p>
+           <svg class="team-svg">
+            <use href="./img/symbol-defs.svg#icon-instagram"></use>
+            </svg>
+            <svg class="team-svg">
+              <use href="./img/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+              <svg class="team-svg">
+                <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+                <svg class="team-svg">
+                  <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
           </div>
         </li>
         <li class="team-item">
@@ -93,6 +114,18 @@
           <div class="margin">
            <h2 class="team-titles">Ольга Рєпіна</h2> 
            <p class="team-text">Frontend Developer</p>
+           <svg class="team-svg">
+            <use href="./img/symbol-defs.svg#icon-instagram"></use>
+            </svg>
+            <svg class="team-svg">
+              <use href="./img/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+              <svg class="team-svg">
+                <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+                <svg class="team-svg">
+                  <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
           </div>
         </li>
         <li class="team-item">
@@ -100,6 +133,18 @@
           <div class="margin">
            <h2 class="team-titles">Микола Тарасов</h2>
            <p class="team-text">Marketing</p>
+           <svg class="team-svg">
+            <use href="./img/symbol-defs.svg#icon-instagram"></use>
+            </svg>
+            <svg class="team-svg">
+              <use href="./img/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+              <svg class="team-svg">
+                <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+                <svg class="team-svg">
+                  <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
           </div>
         </li>
         <li class="team-item">
@@ -107,10 +152,47 @@
            <div class="margin">
            <h2 class="team-titles">Михайло Єрмаков</h2>
            <p class="team-text">UI Designer</p>
+           <svg class="team-svg">
+            <use href="./img/symbol-defs.svg#icon-instagram"></use>
+            </svg>
+            <svg class="team-svg">
+              <use href="./img/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+              <svg class="team-svg">
+                <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+                <svg class="team-svg">
+                  <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
           </div>
         </li>
       </ul> 
     </div>
+     </section>
+     <section class="clients">
+      <div class="container">
+      <h2 class="clients-tytle">Постійні клієнти</h2>
+        <ul class="clients-list">
+          <li class="clients-item"><svg class="clients-svg">
+            <use href="./img/symbol-defs.svg#icon-yaco"></use>
+          </svg></li>
+          <li class="clients-item"><svg class="clients-svg">
+            <use href="./img/symbol-defs.svg#icon-here"></use>
+          </svg></li>
+          <li class="clients-item"> <svg class="clients-svg">
+            <use href="./img/symbol-defs.svg#icon-company"></use>
+          </svg></li>
+          <li class="clients-item"> <svg class="clients-svg">
+            <use href="./img/symbol-defs.svg#icon-peters"></use>
+          </svg></li>
+          <li class="clients-item"><svg class="clients-svg">
+            <use href="./img/symbol-defs.svg#icon-brand"></use>
+          </svg></li>
+          <li class="clients-item"><svg class="clients-svg">
+            <use href="./img/symbol-defs.svg#icon-tagline"></use>
+          </svg></li>
+        </ul>
+      </div>
      </section> 
     </main> 
   <footer class="footer"> 
@@ -120,9 +202,24 @@
     <a href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu" target="_blank" class="link-lesia">м. Київ, пр-т Лесі Українки, 26</a> 
     <ul class="footer-list"> 
       <li><a href="mailto:info@devstudio.com" class="link-adres">info@devstudio.com</a></li> 
-      <li><a href="tel:+380961111111" class="link-number">+38 096 111 11 11</a></li> 
-    </ul> 
-  </address> 
+      <li><a href="tel:+380961111111" class="link-number">+38 096 111 11 11</a></li>
+    </ul>
+    <h1 class="footer-h1">приєднуйтесь</h1>
+    <ul class="list-svg">
+      <li class="item-svg"><svg class="footer-svg">
+          <use href="./img/symbol-defs.svg#icon-instagram"></use>
+        </svg></li>
+      <li class="item-svg"><svg class="footer-svg">
+          <use href="./img/symbol-defs.svg#icon-twitter"></use>
+        </svg></li>
+      <li class="item-svg"><svg class="footer-svg">
+          <use href="./img/symbol-defs.svg#icon-facebook"></use>
+        </svg></li>
+      <li class="item-svg"><svg class="footer-svg">
+          <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+        </svg></li>
+    </ul>
+</address> 
 </div>
   </footer> 
 </body> 
