--- a/portofolio.html
+++ b/portofolio.html
@@ -25,8 +25,16 @@
           </ul> 
          </nav> 
          <ul class="header-list"> 
-          <li><a href="mailto:info@devstudio.com" class="items-item">info@devstudio.com</a></li> 
-          <li><a href="tel:+380961111111" class="items-item">+38 096 111 11 11</a></li>
+          <li><a href="mailto:info@devstudio.com" class="adres"> <svg class="adres-icon">
+            <use href="./img/symbol-defs.svg#icon-envelope">
+
+            </use>
+          </svg>info@devstudio.com</a></li> 
+          <li><a href="tel:+380961111111" class="number"> <svg class="adres-icon">
+            <use href="./img/symbol-defs.svg#icon-smartphone">
+
+            </use>
+          </svg>+38 096 111 11 11</a></li>
         </div>
           </header> 
           <main>
@@ -115,7 +123,20 @@
             <ul class="footer-list"> 
               <li><a href="mailto:info@devstudio.com" class="link-adres">info@devstudio.com</a></li> 
               <li><a href="tel:+380961111111" class="link-number">+38 096 111 11 11</a></li> 
-            </ul> 
+            </ul>
+            <p class="footer-pocition">приєднуйтесь</p>
+        <svg class="footer-svg">
+          <use href="./img/symbol-defs.svg#icon-instagram"></use>
+        </svg>
+        <svg class="footer-svg">
+          <use href="./img/symbol-defs.svg#icon-twitter"></use>
+        </svg>
+        <svg class="footer-svg">
+          <use href="./img/symbol-defs.svg#icon-facebook"></use>
+        </svg>
+        <svg class="footer-svg">
+          <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+        </svg> 
           </address>
         </div> 
           </footer> 
